MyTime-KBS - Version 1.0.0 - 220425 : Modification in progress

--- a/MyTime/Resource.ms-MY.resx
+++ b/MyTime/Resource.ms-MY.resx
@@ -1071,4 +1071,7 @@
   <data name="Month.Sep" xml:space="preserve">
     <value>Sep</value>
   </data>
+  <data name="MessageSessionExpired" xml:space="preserve">
+    <value>Anda telah dilog keluar oleh sistem kerana tiada aktiviti dalam masa {0} minit</value>
+  </data>
 </root>
