--- a/MyTime/Resource.resx
+++ b/MyTime/Resource.resx
@@ -1099,6 +1099,6 @@
     <value>On Leave</value>
   </data>
   <data name="TotalAttendanceIssue" xml:space="preserve">
-    <value>Total</value>
+    <value>Total Attendance Issue</value>
   </data>
 </root>
