--- a/MyTime/Resource.ms-MY.resx
+++ b/MyTime/Resource.ms-MY.resx
@@ -1099,6 +1099,6 @@
     <value>Cuti</value>
   </data>
   <data name="TotalAttendanceIssue" xml:space="preserve">
-    <value>Jumlah Masalah Kedatangan</value>
+    <value>Jumlah</value>
   </data>
 </root>
