--- a/MyTime/Resource.ms-MY.resx
+++ b/MyTime/Resource.ms-MY.resx
@@ -1140,4 +1140,7 @@
   <data name="Month12" xml:space="preserve">
     <value>Dis</value>
   </data>
+  <data name="AttendanceIssue" xml:space="preserve">
+    <value>Issue</value>
+  </data>
 </root>
