--- a/MyTime/Resource.resx
+++ b/MyTime/Resource.resx
@@ -1140,4 +1140,7 @@
   <data name="Month12" xml:space="preserve">
     <value>Dec</value>
   </data>
+  <data name="AttendanceIssue" xml:space="preserve">
+    <value>Isu</value>
+  </data>
 </root>
